--- a/HW_Hidreletrica/HW_Hidreletrica.csproj
+++ b/HW_Hidreletrica/HW_Hidreletrica.csproj
@@ -9,9 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-=======
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -24,7 +25,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
->>>>>>> Gustavo-Alves
   </ItemGroup>
 
 </Project>
